Oauth security to Users endpoints
